# power-collection

./: .gitignore  Cargo.toml  README.md  Rocket.toml
src/: main.rs
static/: style.css
store/: db.json
templates/: add.html.tera  base.html.tera  index.html.tera
