[package]
name = "power-collection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version="0.5.0-rc.2", features=["json"] }
serde = { version = "1.0", features = ["derive"] }
rocket_dyn_templates = {version="0.1.0-rc.2", features=["tera"]}
uuid = { version="1.0.0", features=["v4"] }